--- a/src/navBar.module.css
+++ b/src/navBar.module.css
@@ -29,6 +29,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  height: 100px;
 }
 .image{
      width: 40px;
@@ -61,19 +62,4 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   &:focus{border-color: #ff9800;
   box-shadow: 0 0 5px rgba(255, 152, 0, 0.5);}
 }
-.searchButton{
-    padding: 10px 20px;
-  border: none;
-  background: #ff9800;
-  color: white;
-  font-size: 1rem;
-  font-weight: bold;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  &:hover{ background-color: #e68900;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.2);}
-  &:active {
-  transform: scale(0.95);
-  }
-}
+
